data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1239.wast
;; 10. **Test Case 10**: Implement a loop that calls an imported function which throws an exception or uses trapping instructions. Ensure the control flow is correctly handled when the loop or imported function ends abruptly due to an exception across module boundaries. This test will verify proper handling and recovery mechanisms in both implementations when faced with control flow interruptions.

(assert_invalid
  (module
    (import "env" "throw_exception" (func $throw))
    (func (start $start)
      (loop (br 0) (call $throw))
    )
  )
  "imported function causes exception"
)